syntax = "proto3";
package liquid;

option go_package = "kegr.io/protobuf/model/storage/liquid";

message Liquid {
    string ID = 1;
    bytes fileHash = 2;
    int64 size = 3;
    bytes content = 4;
    int64 lastUpdated = 5;
    bool deleted = 6;
    Options options = 7;
}

message Options {
    string name = 1;
    string ext = 2;
    int64 cache = 3;
    bool gzip = 4;
}

message Info {
	string id = 1;
	bytes fileHash = 2;
	int64 size = 3;
	string name = 4;
	string ext = 5;
	int64 cache = 6;
	bool gzip = 7;
	bool deleted = 8;
	string accessName = 9;
	int64 lastUpdated = 10;
}